--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,25 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.1.0.RC2 (2018-08-20)
+-----------------------------------------
+* DATAMONGO-2055 - Allow position modifier to be negative using push at position on Update.
+* DATAMONGO-2053 - Add support for $mergeObjects aggregation operator.
+* DATAMONGO-2052 - Add support for MongoDB 3.6 array aggregation operators.
+* DATAMONGO-2051 - Add support for SCRAM-SHA-256 authentication mechanism to MongoCredentialPropertyEditor.
+* DATAMONGO-2050 - Add support for index selection via key attribute for $geoNear aggregation.
+* DATAMONGO-2049 - Add support for MongoDB 4.0 string aggregation operators.
+* DATAMONGO-2048 - Add support for MongoDB 4.0 type conversion aggregation operators.
+* DATAMONGO-2047 - Update $dateToString and $dateFromString aggregation operators to match MongoDB 4.0 changes.
+* DATAMONGO-2046 - Investigate performance regressions between 2.0 GA and 2.1 RC2.
+* DATAMONGO-2045 - Add transaction specific error codes for exception translation.
+* DATAMONGO-2043 - MappingMongoConverter.write(…) does not consider Document a native type and adds _class attribute.
+* DATAMONGO-2041 - Automatically derive the fields to be read from the expected result type.
+* DATAMONGO-2040 - Update mongodb docs to reflect Duplicates.DROP is no longer supported.
+* DATAMONGO-2033 - Release 2.1 RC2 (Lovelace).
+* DATAMONGO-2027 - outputCollection and outputType of MapReduceOptions not work.
+
+
 Changes in version 1.10.14.RELEASE (2018-07-27)
 -----------------------------------------------
 * DATAMONGO-2023 - ClassCastException for $sample aggregation operation.
